# filler

./: CMakeLists.txt  Makefile  filler.h  filler.mvukolov  get_current_map.c  mvukolov.filler
ft_printf/: CMakeLists.txt
ft_printf/libftprintf/: ft_putstr.c
get_next_line/: get_current_map.c  get_next_line.c
resources/: filler.trace  fuck  newfile  test
resources/players/: mvukolov.filler
srcs/: calculate_direction.c  can_place.c  external_functions.c  filler.c  get_current_map.c  parce_piece.c
